# hostalgrid-plus-plus

./: .gitignore  Dockerfile  README.md  app.py  inference.py  pyproject.toml
server/: app.py
simulation/: appliances.py  grid.py  hostel.py  student.py
tasks/: task_easy.py  task_hard.py  task_medium.py
