[project]
name = "hostalgrid-plus-plus"
version = "0.1.0"
description = "Human-Aware Energy Optimization RL Environment"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.21.0",
    "openenv-core>=0.2.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
]

[project.scripts]
server = "app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"